[package] 
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies] 
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
log = "0.4.11"
bytes = "1.0.1"
futures = "0.3.15"
bincode = "1.3.3"
serde = { version = "1.0.195", features = ["derive"]}
async-trait = "0.1.50"
ring = "0.17"

network = { path = "../network" }
message = { path = "../message" }

[[bin]]
name = "seq"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/dummy_client.rs"

[[bin]]
name = "server"
path = "src/dummy_server.rs"